package br.edu.ifpr.padroes.adapter;

public interface Pagamento {

    void pagar(double valor);

}